# tapl

./: .gitignore  README.md
SimplyTyped/: SimplyTyped.opam  dune-project
SimplyTyped/lib/: dune  lexer.mll  parser.mly  semantic.ml  semantic.mli  syntax.ml  syntax.mli
SimplyTyped/test/: test.f
Untyped/: untyped.opam
Untyped/lib/: dune  lexer.mll  semantic.mli
UntypedArith/: arith.opam  dune-project
UntypedArith/lib/: semantic.mli  support.ml  syntax.mli
arith/lib/: lexer.mll  parser.mly  semantic.ml  semantic.mli  syntax.ml  syntax.mli
untyped/: dune-project
untyped/lib/: support.mli  syntax.ml
