(lang dune 3.0)

(name SimplyTyped)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Huiri Tan")

(maintainers "Huiri Tan")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name SimplyTyped)
 (synopsis "A short synopsis")
 (description "Implementation of simply typed lambda calculus")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
